# cv-processing-platform

./: .gitignore  docker-compose.yml  pyproject.toml
libs/common/: pyproject.toml
libs/common/src/common/: __init__.py  config.py  exceptions.py  models.py  schemas.py
libs/common/src/common/schemas/: __init__.py
libs/common/src/common/services/: __init__.py  storage.py  vector_service.py
services/core/: pyproject.toml  requirements.txt
services/core/alembic/: env.py
services/core/alembic/versions/: 2026_03_04_1935-d1464b08ea76_hash_added_to_documents.py  2026_03_06_2347-b0e7304861a8_add_jsonb_and_vector_to_documents.py  2026_03_11_2223-95c755303d11_add_partial_unique_index_for_content_.py  36570e2fc5f3_initial_migration.py
services/core/src/: main.py
services/core/src/api/: candidates.py  documents.py  router.py  routes.py
services/core/src/core/: config.py
services/core/src/db/: models.py  session.py
services/core/src/schemas/: candidate.py  document.py
services/core/src/services/: candidate.py  document.py  queue.py  storage.py
services/worker/: pyproject.toml
services/worker/src/: db.py  main.py
services/worker/src/core/: config.py
services/worker/src/services/: ai_service.py  censor_service.py  hash_service.py  pdf_service.py
services/worker/tests/unit/: test_ai_service.py  test_censor_service.py  test_hash_service.py
