[project]
name = "common"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy[asyncio]>=2.0.46",
    "aioboto3>=15.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]