[project]
name = "common"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "aioboto3>=15.5.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]