[project]
name = "core"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.13.0",
    "python-multipart>=0.0.22",
    "aioboto3>=15.5.0",
    "typing_extensions>=4.15.0",
    "arq>=0.26.0",
    "common",
]

[tool.uv.sources]
common = { workspace = true }