[project]
name = "core"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.13.0",
    "python-multipart>=0.0.22",
    "typing_extensions>=4.15.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.1.0",
    "common",
]

[tool.uv.sources]
common = { workspace = true }