[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "common",
    "pymupdf>=1.27.1",
]

[tool.uv.sources]
common = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "tests"
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
